# simulation

./: .pre-commit-config.yaml  Makefile  README.md  islands.py  pyproject.toml  two_islands.py
src/: simulation.py
tests/: test_simulation.py
