[tool.poetry]
name = "simulation"
version = "0.0.0"
description = "Playing with a simulation idea"
authors = ["Bart Kastermans <kasterma@kasterma.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
python-language-server = "^0.36.2"
black = "^23.12.0"
bandit = "^1.7.6"
mypy = "^1.7.1"
pytest = "^7.4.3"
ruff = "^0.1.8"
pre-commit = "^3.6.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]